--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'libs/mixins';
 @import '../css/font-awesome.min.css';
 // @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic');
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&family=Source+Serif+Pro:wght@600&display=swap');
 @import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
 
 /*
@@ -55,7 +55,7 @@ $size-header-pad: 4em;
 
 body {
   background: _palette(bg);
-  font-family: 'Noto Serif JP', sans-serif;
+  font-family: 'Noto Serif JP', serif;
   color: _palette(fg);
   font-size: 16pt;
   font-weight: _font(weight);
@@ -138,7 +138,7 @@ h1 {
 }
 
 h2 {
-  // font-size: 1.5em;
+  font-family: 'Noto Serif JP', serif;
   line-height: 1.5em;
   font-size: 2.4em;
   font-variant-numeric: tabular-nums;
@@ -932,15 +932,21 @@ input[type='button'],
 /* Work Item */
 
 .work-item {
-  margin: 0 0 _size(element-margin) 0;
+  margin: 0 0 _size(element-margin) * 0.7 0;
 
   .image {
-    margin: 0 0 (_size(element-margin) * 0.75) 0;
+    margin: 0 0 (_size(element-margin) * 0.3) 0;
   }
 
-  h3 {
-    font-size: 1em;
-    margin: 0 0 (_size(element-margin) * 0.25) 0;
+  .title {
+    font-size: 1.3em;
+  }
+
+  .image-date {
+    padding-right: 0.5em;
+    font-weight: bold;
+    font-style: oblique;
+    font-size: 0.7em;
   }
 
   p {
@@ -959,7 +965,13 @@ input[type='button'],
   @include vendor('justify-content', 'space-between');
   background-color: _palette(accent2, bg);
   background-attachment: scroll, fixed;
-  background-image: url('images/overlay.png'), url('../images/bg.jpg');
+  // background-image: url('../images/bg.jpg');
+  background-image: linear-gradient(
+      to bottom,
+      rgba(245, 246, 252, 0.2),
+      rgba(128, 86, 48, 0.3)
+    ),
+    url('../images/bg.jpg');
   background-position: top left, top left;
   background-repeat: repeat, no-repeat;
   background-size: auto, auto;
@@ -1066,39 +1078,31 @@ input[type='button'],
       padding-top: 0;
     }
   }
-  > #work {
-    .row {
-      display: flex;
-    }
-    .title {
-      font-size: 1.5em;
-    }
-    .image-date {
-      font-weight: bold;
-      font-size: 1em;
-    }
-  }
+
   > #exhibit {
     /* List */
     ul {
       counter-reset: index;
       padding: 0;
-      max-width: 800px;
+      max-width: 700px;
+      list-style-type: none;
     }
 
     /* List element */
     li {
-      counter-increment: index;
-      display: flex;
       align-items: center;
-      padding: 12px 0;
       box-sizing: border-box;
-
+      padding-bottom: 0;
+      > .exhibit-item {
+        margin: 0 0 0 0;
+      }
       > .date {
+        border-bottom: 2px solid green;
+        width: 100%;
+        text-align: right;
         font-size: 1.3rem;
         text-align: right;
         font-weight: bold;
-        min-width: 50px;
         padding-right: 10px;
         font-variant-numeric: tabular-nums;
         align-self: flex-start;
@@ -1492,6 +1496,17 @@ body.is-touch {
     }
   }
 
+  #main {
+    > #exhibit {
+      /* List element */
+      li {
+        > .exhibit-item {
+          margin: 0 0 1em 0;
+        }
+      }
+    }
+  }
+
   /* List */
 
   ul {
@@ -1553,8 +1568,10 @@ body.is-touch {
 @include breakpoint(xsmall) {
   $size-header-pad: 1.5em;
 
+  .exhibit-item {
+    margin: 0 0 1em 0;
+  }
   /* List */
-
   ul {
     &.actions {
       margin: 0 0 _size(element-margin) 0;
